--- a/udhaar/templates/udhaar/newgroup.html
+++ b/udhaar/templates/udhaar/newgroup.html
@@ -11,8 +11,10 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="style_h.css" rel="stylesheet">
-    <script src = "controller.js"> </script>
+
+    {% load static %}
+    <link href="{% static 'udhaar/style_h.css' %}" rel="stylesheet">
+    <script src = "{% static 'udhaar/controller.js' %}"> </script>
   </head>
   <body>
 
